# lang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  argparse.h  ast.cpp  ast.h  astbuilder.cpp  astbuilder.h  astcloner.cpp  astdumper.cpp  astdumper.h  astvisitor.h  compiler.cpp  compiler.h  lang.cpp  lang.h  lexer.cpp  lexer.h  lower.cpp  mangle.h  nodes.def  parser.cpp  parser.h  test.cpp  testargparse.cpp  testlexer.cpp  testparser.cpp  types.def
.github/workflows/: build-sanitized-clang.yml  build-sanitized-gcc.yml  build-sanitized.yml  check-formatted.yml
examples/: alt-call-syntax.lang  alt-get-syntax.lang  anonymous-struct.lang  buffer.lang  buffer2.lang  char-array-str.lang  compiler.lang  composite-type.lang  composite-unpack.lang  factorial.lang  fib-non-recurse.lang  fib.lang  func-as-argument.lang  hello-world-comments.lang  hello-world-let.lang  hello-world.lang  if-false.lang  if-true.lang  metaprogramming.lang  methods.lang  multiple-callable-overrides.lang  named-struct.lang  project-euler-1.lang  read-all-stdin.lang  read-all-tokens.lang  read-stdin.lang  read-token.lang  regression-test-1.lang  regression-test-2.lang  regression-test-3.lang  return-func.lang  strcmp.lang  type-deduction.lang  variadic-args-multiple-candidates-error.lang  variadic-args-old-call-syntax.lang  variadic-args.lang
include/: argparse.h  ast.h  astbuilder.h  astcloner.h  astvisitor.h  compiler.h  genericresolver.h  lang.h  lexer.h  nodes.def  parser.h  types.def
src/: CMakeLists.txt  ast.cpp  astcloner.cpp  astdumper.cpp  compiler.cpp  diagnostics.cpp  genericresolver.cpp  lang.cpp  lexer.cpp  lower.cpp  mangle.cpp  parser.cpp
tests/: CMakeLists.txt  test.cpp  testargparse.cpp  testastdumper.cpp  testcompiler.cpp  teste2e.cpp  testlexer.cpp  testparser.cpp
